src/objects/Country_Code_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Abbreviation__c</fullName>
        <description>Letter abbreviation for the country</description>
        <label>Abbreviation</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <description>2 digit code representing the country</description>
        <label>Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Keyboard_Translation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>There COULD be a keyboard translation error with these countries, if bill to is this country set Order to Internal review for web orders</description>
        <label>Keyboard Translation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PQM_Country__c</fullName>
        <label>PQM Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Restriction_Text__c</fullName>
        <description>Stores the detailed restriction text that might appear for item restrictions</description>
        <label>Restriction Text</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shipping Allowed</label>
        <type>Checkbox</type>
    </fields>
    <label>Country Code Mapping</label>
</CustomObject>